# MUSICBOT

./: README.md  config.py  mongo.py  pyproject.toml
AloneMusic/: __init__.py
AloneMusic.egg-info/: PKG-INFO  requires.txt
AloneMusic/core/: mongo.py
AloneMusic/utils/: thumbnails.py
